--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "default-image-deploy" ]
 env:
   AWS_REGION: ap-northeast-2   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: koko # set this to your Amazon ECR repository name
