--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: 0.1
+        IMAGE_TAG: 0.2
       run: |
         # Build a docker container and
         # push it to ECR so that it can
@@ -42,5 +42,6 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./deploy/Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        aws lambda update-function-code --function-name hihi --image-uri $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       
