--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,8 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: 0.2
+        IMAGE_TAG: ${{ github.sha }}
+        function_name: hihi
       run: |
         # Build a docker container and
         # push it to ECR so that it can
@@ -42,6 +43,6 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./deploy/Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        aws lambda update-function-code --function-name hihi --image-uri $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        aws lambda update-function-code --function-name $function_name --image-uri $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       
