--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "mains" ]
 env:
   AWS_REGION: ap-northeast-2   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: koko # set this to your Amazon ECR repository name
@@ -18,30 +18,42 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+    
+    - name: Setup Go
+      uses: actions/setup-go@v4
       with:
-        terraform_version: 1.3.0
+        go-version: '1.20.x'
+
+    - name: Install dependency & Build Test
+      working-directory: ./src
+      run: go mod tidy | go build 
           
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: "ROLE ARN FROM TERRAFORM OUTPUT"
-        role-session-name: samplerolesession
+        role-to-assume: "arn:aws:iam::455883942660:role/gha_oidc_assume_role"
+        role-session-name: name
         aws-region: ${{ env.AWS_REGION }}
 
-    - name: Terraform Init
-      working-directory: ./src/terraform
-      id: init
-      run: terraform init
-        
-    - name: Terraform Plan
-      id: plan
-      working-directory: ./src/terraform
-      run: |
-        echo "## Terraform Plan" >> $GITHUB_STEP_SUMMARY
-        terraform plan -no-color >> $GITHUB_STEP_SUMMARY
-    
-    
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
 
+    - name: Get short SHA
+      id: get-short-sha
+      run: |
+        tag=$(echo ${{github.sha}} | cut -c 1-7)
+        echo "::set-output name=tag::$tag"
+      
+    - name: Build,  and push image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        IMAGE_TAG: ${{steps.get-short-sha.outputs.tag}}
+      run: |
+        # Build a docker container and
+        # push it to ECR so that it can
+        # be deployed to ECS.
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./deploy/Dockerfile .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
