--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,6 @@ permissions:
   contents: read  
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
@@ -24,26 +23,16 @@ jobs:
       with:
         go-version: '1.20.x'
 
-    - name: Install dependency
+    - name: Install dependency & Build Test
       working-directory: ./src
-      run: go mod tidy
-      
-    - name: Build Test
-      working-directory: ./src
-      run: go build -v -o main .
-      
-    - name: run test
-      working-directory: ./src
-      run: go test ./starter.go
-      
+      run: go mod tidy || go build 
           
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: "arn:"
-        role-session-name: name
+        role-to-assume: "arn:aws:iam::455883942660:role/gha_oidc_assume_role"
+        role-session-name: GitHubActions
         aws-region: ${{ env.AWS_REGION }}
-
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
@@ -57,7 +46,7 @@ jobs:
     - name: Build,  and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: "koko"
         IMAGE_TAG: ${{steps.get-short-sha.outputs.tag}}
       run: |
         # Build a docker container and
@@ -66,10 +55,3 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./deploy/Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        
-    - name: lambda image update
-      id: lambda-image-update
-      env: 
-        function_name: hihi
-      run: |
-        aws lambda update-function-code —function-name $function_name —image-uri ${{ steps.build-image.outputs.image }}
